frontend/test/should_pass/hom_017.grg
rule r {
	x: Node;
	y: Node;
	
	hom(x,y);

	modify {
		delete(x);
		delete(y);
	}
}

