frontend/test/should_fail/ret_006.grg
rule r : (Node) {
	pattern {
		x: Node;
		y: Node;
	}
	modify {
		return(x, y);
	}
}

